- tin.lua: fixed encoding problems
- fixed a bug in mimer.lua about the Content-type header definition
11/03/2006 0.0.98
- fixed a bug in cookie.lua about the capture of cookie names (Thanks to
Matteo Turconi)
- documentation of all lua modules is now generated (with last release some
lua placed in subdirs were missing)
- added password field to the key()/hash() function of a bunch of lua plugins.
This fixes a potential security problem.
- added Kevin Edwards patch to altsocklib.c (should definitively fix the
looping problem)
- added support for backports.org in buildfactory/Makefile
- fixed a bug in browser.lua if the body of a redirect is empty (thanks loprix)
04/02/2006 0.0.97
- yahoo.lua: Added support for the new Yahoo interface. (russell822)
- es: *** empty log message *** (lisar314)
- es: Version 0.96 (lisar314)
- tre.lua: bumped required version to 0.0.97 (gareuselesinge)
- gmail.lua: added zibo patch (gareuselesinge)
- yahoo.lua: Remove the quoted-printable encoding header from messages since Yahoo does the decoding on its servers. (russell822)
- gmail.lua, squirrelmail.lua, yahoo.lua: Updated the version and require version (russell822)
- gmail.lua, squirrelmail.lua, tre.lua, yahoo.lua: migration of all lua code
to the lua5.1 module system
- log.c partially rewritten to make output more comfortable
- fixed manual according to the 'require' adoption (gareuselesinge)
- updated supereva plugin (Thanks Visioning)
- added support for 'installation' file (like the 'interface' one) to specify in a sinple way where to install files (see the browser_lua modules for example)
- reorganized some modules using a non flat structure (browser, lxp, soap) 
- manual updated concerning the new lua5.1 module system
- some fixes to Makefiles needed to support a non-flat LUA directory
- moved all official plugins to the lua5.1 module system (using 'require')
- moved all LUA modules to the lua5.1 module system (using 'module')